criando a section quem somos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <header>
             <div class="header-bg">
-                <div class="header">
-                    <div class="header__logo">
+                <div class="c-header">
+                    <div class="c-header__logo">
                         <img src="./assets/img/logo.png" alt="frontbox logo" />
                     </div>
                     <nav>
@@ -44,6 +44,35 @@
 
             <h1>Aprenda a programar, <br />Um projeto por vez!</h1>
         </header>
+        <hr />
+        <section class="section-quem-somos" id="somos">
+            <h2>QUEM SOMOS</h2>
+            <div class="c-section-quem-somos">
+                <div class="c-section-quem-somos__paragraph">
+                    <p>
+                        Mussum Ipsum, cacilds vidis litro abertis. Todo mundo vê
+                        os porris que eu tomo, mas ninguém vê os tombis que eu
+                        levo! Atirei o pau no gatis, per gatis num morreus. Mais
+                        vale um bebadis conhecidiss, que um alcoolatra anonimis.
+                        Cevadis im ampola pa arma uma pindureta.
+                    </p>
+                    <br />
+                    <p>
+                        Copo furadis é disculpa de bebadis, arcu quam euismod
+                        magna. Praesent vel viverra nisi. Mauris aliquet nunc
+                        non turpis scelerisque, eget. Interagi no mé, cursus
+                        quis, vehicula ac nisi. Suco de cevadiss, é um leite
+                        divinis, qui tem lupuliz, matis, aguis e fermentis.
+                    </p>
+                </div>
+                <figure class="c-section-quem-somos__img">
+                    <img
+                        src="./assets/img/somos.png"
+                        alt="gato laranja escrevendo no tablet"
+                    />
+                </figure>
+            </div>
+        </section>
         <hr />
     </body>
 </html>
