criando a section de cursos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 >
                             </li>
                             <li>
-                                <a href="#palnos" class="nav__link">Planos</a>
+                                <a href="#planos" class="nav__link">Planos</a>
                             </li>
                             <li>
                                 <a href="#caracteristicas" class="nav__link"
@@ -45,10 +45,10 @@
             <h1>Aprenda a programar, <br />Um projeto por vez!</h1>
         </header>
         <hr />
-        <section class="section-quem-somos" id="somos">
+        <section class="section-somos" id="somos">
             <h2>QUEM SOMOS</h2>
-            <div class="c-section-quem-somos">
-                <div class="c-section-quem-somos__paragraph">
+            <div class="c-section-somos">
+                <div class="c-section-somos__paragraph">
                     <p>
                         Mussum Ipsum, cacilds vidis litro abertis. Todo mundo vê
                         os porris que eu tomo, mas ninguém vê os tombis que eu
@@ -65,12 +65,57 @@
                         divinis, qui tem lupuliz, matis, aguis e fermentis.
                     </p>
                 </div>
-                <figure class="c-section-quem-somos__img">
+                <figure class="c-section-somos__img">
                     <img
                         src="./assets/img/somos.png"
                         alt="gato laranja escrevendo no tablet"
                     />
                 </figure>
+            </div>
+        </section>
+        <hr />
+        <section class="section-cursos" id="cursos">
+            <h2>NOSSOS CURSOS</h2>
+            <div class="c-section-cursos">
+                <div class="curso">
+                    <img
+                        src="./assets/img/ai.png"
+                        alt="Inteligência Artificial"
+                        class="curso__img"
+                    />
+                    <h3>Inteligencia Artificial</h3>
+                    <p class="curso__descricao">
+                        Mussum Ipsum, cacilds vidis litro abertis. Posuere
+                        libero varius. Nullam a nisl ut ante blandit hendrerit.
+                        Aenean sit amet nisi.
+                    </p>
+                </div>
+                <div class="curso">
+                    <img
+                        src="./assets/img/front.png"
+                        alt="Frontend"
+                        class="curso__img"
+                    />
+                    <h3>Frontend</h3>
+                    <p class="curso__descricao">
+                        Mussum Ipsum, cacilds vidis litro abertis. Posuere
+                        libero varius. Nullam a nisl ut ante blandit hendrerit.
+                        Aenean sit amet nisi.
+                    </p>
+                </div>
+                <div class="curso">
+                    <img
+                        src="./assets/img/seguranca.png"
+                        alt="Segurança da Informação"
+                        class="curso__img"
+                    />
+                    <h3>Segurança da Informação</h3>
+                    <p class="curso__descricao">
+                        Mussum Ipsum, cacilds vidis litro abertis. Posuere
+                        libero varius. Nullam a nisl ut ante blandit hendrerit.
+                        Aenean sit amet nisi.
+                    </p>
+                </div>
             </div>
         </section>
         <hr />
