criando a section nossos planos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <hr />
         <section class="section-somos" id="somos">
             <h2>QUEM SOMOS</h2>
-            <div class="c-section-somos">
+            <div class="c-somos">
                 <div class="c-section-somos__paragraph">
                     <p>
                         Mussum Ipsum, cacilds vidis litro abertis. Todo mundo vê
@@ -76,7 +76,7 @@
         <hr />
         <section class="section-cursos" id="cursos">
             <h2>NOSSOS CURSOS</h2>
-            <div class="c-section-cursos">
+            <div class="c-cursos">
                 <div class="curso">
                     <img
                         src="./assets/img/ai.png"
@@ -115,6 +115,68 @@
                         libero varius. Nullam a nisl ut ante blandit hendrerit.
                         Aenean sit amet nisi.
                     </p>
+                </div>
+            </div>
+        </section>
+        <hr />
+        <section class="section-planos" id="planos">
+            <h2>Planos</h2>
+            <div class="c-planos">
+                <div class="plano">
+                    <h2 class="plano__titulo">Básico</h2>
+                    <span class="plano__preco"><sup>R$</sup>25</span>
+                    <hr class="plano__divisor" />
+                    <ul class="plano-lista">
+                        <li class="plano-lista__item">
+                            1 mês de acesso ilimitado
+                        </li>
+                        <li class="plano-lista__item">
+                            Acesso a todos os cursos
+                        </li>
+                        <li class="plano-lista__item">
+                            Certificado de conclusão
+                        </li>
+                    </ul>
+                    <a href="#" class="plano__btn-comprar">Comprar</a>
+                </div>
+
+                <div class="plano">
+                    <h2 class="plano__titulo">Premium</h2>
+                    <span class="plano__preco"><sup>R$</sup>40</span>
+                    <hr class="plano__divisor" />
+                    <ul class="plano-lista">
+                        <li class="plano-lista__item">
+                            1 mês de acesso ilimitado
+                        </li>
+                        <li class="plano-lista__item">
+                            Acesso a todos os cursos
+                        </li>
+                        <li class="plano-lista__item">
+                            Certificado de conclusão
+                        </li>
+                        <li class="plano-lista__item">Suporte</li>
+                    </ul>
+                    <a href="#" class="plano__btn-comprar">Comprar</a>
+                </div>
+
+                <div class="plano">
+                    <h2 class="plano__titulo">Ultra</h2>
+                    <span class="plano__preco"><sup>R$</sup>25</span>
+                    <hr class="plano__divisor" />
+                    <ul class="plano-lista">
+                        <li class="plano-lista__item">
+                            1 mês de acesso ilimitado
+                        </li>
+                        <li class="plano-lista__item">
+                            Acesso a todos os cursos
+                        </li>
+                        <li class="plano-lista__item">
+                            Certificado de conclusão
+                        </li>
+                        <li class="plano-lista__item">Suporte</li>
+                        <li class="plano-lista__item">Download das aulas</li>
+                    </ul>
+                    <a href="#" class="plano__btn-comprar">Comprar</a>
                 </div>
             </div>
         </section>
