criando a section das vantagens

--- a/index.html
+++ b/index.html
@@ -181,5 +181,61 @@
             </div>
         </section>
         <hr />
+        <section class="section-vantagens" id="vantagens">
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Foco em projeto</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Portfólio incrível</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Aprenda fazendo</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Para todas as idades</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Atualizado</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+
+            <div class="vantagem">
+                <h2 class="vantagem__titulo">Comece hoje</h2>
+                <p class="vantagem__descricao">
+                    Mussum Ipsum, cacilds vidis litro abertis. Posuere libero
+                    varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit
+                    amet nisi.
+                </p>
+            </div>
+        </section>
+        <hr />
     </body>
 </html>
