criando section newsletter e footer

--- a/index.html
+++ b/index.html
@@ -237,5 +237,41 @@
             </div>
         </section>
         <hr />
+        <section class="section-newsletter">
+            <div class="c-newsletter">
+                <div class="newsletter-info">
+                    <h2>Newsletter</h2>
+                    <p>
+                        Assine e fique por dentro<br />
+                        das novidades
+                    </p>
+                </div>
+                <form action="" class="newsletter-form">
+                    <input
+                        class="newsletter-form__input"
+                        type="text"
+                        placeholder="Seu e-mail"
+                    />
+                    <button type="submit" class="newsletter-form__submit">
+                        Assinar
+                    </button>
+                </form>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="c-footer">
+                <p>
+                    Este é um projeto feito por g101.<br />
+                    Rua dos bobos, 0, 2º andar - Triangulo das Bermudas
+                </p>
+                <a href="/">
+                    <img
+                        src="./assets/img/logo.png"
+                        alt="frontbox logotipo"
+                        class="footer__img"
+                    />
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
