consertando os ids dos links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                                 <a href="#planos" class="nav__link">Planos</a>
                             </li>
                             <li>
-                                <a href="#caracteristicas" class="nav__link"
-                                    >Características</a
+                                <a href="#vantagens" class="nav__link"
+                                    >Vantagens</a
                                 >
                             </li>
                             <li>
@@ -258,7 +258,7 @@
                 </form>
             </div>
         </section>
-        <footer class="footer">
+        <footer class="footer" id="contato">
             <div class="c-footer">
                 <p>
                     Este é um projeto feito por g101.<br />
