--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Frontbox</title>
-        <link rel="stylesheet" href="./assets/css/soft-reset.css" />
+
         <link rel="stylesheet" href="./assets/css/styles.css" />
+        <link rel="stylesheet" href="./assets/css/reset.css" />
     </head>
     <body>
         <header>
